--- a/about/index.html
+++ b/about/index.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <script src="https://cdn.jsdelivr.net/npm/theme-change@2.0.2/index.js"></script>  
-  <link rel="stylesheet" href="../assets/index.e8dce6a3.css"></head>
+  <link rel="stylesheet" href="../assets/2022-02-23-i-built-a-blog-using-astro.934b6d3f.css"></head>
 
   <body>
     
@@ -107,7 +107,9 @@
     </div>
   </div>
   <p class="bio py-4">
-    I write the software, especially JavaScript. I play the drums, especially groovin'. I wore out my last soapbox, so I digitized this one instead :).
+    I write the software, especially JavaScript. I play the drums, especially groovin'.
+    I wore out my last soapbox, so I digitized this one instead :).
+    Mostly a way for me to write things down so I don't forget.
   </p>
 </div>
       </main>
