--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <script src="https://cdn.jsdelivr.net/npm/theme-change@2.0.2/index.js"></script>  
-  <link rel="stylesheet" href="./assets/index.e8dce6a3.css"><link rel="stylesheet" href="./assets/prism-atom-dark.f0951449.css">
+  <link rel="stylesheet" href="./assets/2022-02-23-i-built-a-blog-using-astro.934b6d3f.css"><link rel="stylesheet" href="./assets/prism-atom-dark.f0951449.css">
 </head>
 
   <body>
@@ -98,13 +98,7 @@
       <main class="flex flex-grow justify-center min-h-screen p-4">
         
 <div class="text-2xl w-4/5">
-  <div class="py-4">
-        <a href="/posts/2022-02-23-i-built-a-blog-using-astro">I built a blog using Astro</a>
-
-        <p class="text-sm">
-          February 23, 2022
-        </p>
-    </div>
+  
 </div>
       </main>
     <footer>
