--- a/index.html
+++ b/index.html
@@ -98,7 +98,19 @@
       <main class="flex flex-grow justify-center min-h-screen p-4">
         
 <div class="text-2xl w-4/5">
-  
+  <div class="py-4">
+        <a href="/posts/2022-03-11-using-zod-to-parse-function-schemas">Using Zod to Parse Function Schemas</a>
+
+        <p class="text-sm">
+          March 11, 2022
+        </p>
+    </div><div class="py-4">
+        <a href="/posts/2022-02-23-i-built-a-blog-using-astro">I built a blog using Astro</a>
+
+        <p class="text-sm">
+          February 23, 2022
+        </p>
+    </div>
 </div>
       </main>
     <footer>
