deploy: d1a8842c2894f9892f57247fd2da20bab06933ab

--- a/about/index.html
+++ b/about/index.html
@@ -16,7 +16,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <script src="https://cdn.jsdelivr.net/npm/theme-change@2.0.2/index.js"></script>  
-  <link rel="stylesheet" href="/assets/asset.a2db8526.css"></link>
+  <link rel="stylesheet" href="/assets/asset.f25bb8e0.css"></link>
 </head>
 
   <body>
@@ -103,7 +103,7 @@
 
     <div class="flex justify-center">
       <div class="avatar">
-        <div class="w-10 rounded-full">
+        <div style="width: 250px;" class="rounded-full">
           <img src="/assets/images/tyler.jpeg">
         </div>
       </div>
