--- a/about/index.html
+++ b/about/index.html
@@ -6,8 +6,6 @@
     <title>Tyler Hall - Fullstack Web Developer</title>
     <base href="/">
 
-    
-
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Tyler Hall - Web Developer, hyper Core team, Open Source Project Maintainer">
     <meta name="keywords" content="Tyler Hall, Blog, JavaScript, Hyper, GraphQL, Deno, Svelte, React, ADT, Functional">
@@ -16,7 +14,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <script src="https://cdn.jsdelivr.net/npm/theme-change@2.0.2/index.js"></script>  
-  <link rel="stylesheet" href="/assets/asset.b3af120d.css"></link>
+  <link rel="stylesheet" href="/assets/asset.e4a2fa38.css"></link>
 </head>
 
   <body>
@@ -96,24 +94,26 @@
   </div>
 </div>
       <main class="flex flex-grow justify-center min-h-screen p-4">
-        <div class="flex-col space-around space-y-4">
-    <div class="text-2xl py-4">
-      About Me
-    </div>
+        <div class="w-full md:w-3/5">
+    <div class="flex-col space-around space-y-4">
+      <div class="text-2xl py-4">
+        About Me
+      </div>
 
-    <div class="flex justify-center">
-      <div class="avatar">
-        <div style="width: 250px;" class="rounded-full">
-          <img src="/assets/images/tyler.jpeg">
+      <div class="flex justify-center">
+        <div class="avatar">
+          <div class="w-60 rounded-full">
+            <img src="/assets/images/tyler.jpeg">
+          </div>
         </div>
       </div>
-    </div>
 
-    <p class="bio py-4">
-      I write the software, especially JavaScript. I play the drums, especially groovin'.
-      I wore out my last soapbox, so I digitized this one instead :).
-      Mostly a way for me to write things down so I don't forget.
-    </p>
+      <p class="bio py-4">
+        I write the software, especially JavaScript. I play the drums, especially groovin'.
+        I wore out my last soapbox, so I digitized this one instead :).
+        Mostly a way for me to write things down so I don't forget.
+      </p>
+    </div>
   </div>
       </main>
     <footer>
