--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <title>Tyler Hall - Fullstack Web Developer</title>
     <base href="/">
 
-    
-
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Tyler Hall - Web Developer, hyper Core team, Open Source Project Maintainer">
     <meta name="keywords" content="Tyler Hall, Blog, JavaScript, Hyper, GraphQL, Deno, Svelte, React, ADT, Functional">
@@ -16,7 +14,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <script src="https://cdn.jsdelivr.net/npm/theme-change@2.0.2/index.js"></script>  
-  <link rel="stylesheet" href="/assets/asset.f9ff5973.css"></link>
+  <link rel="stylesheet" href="/assets/asset.7d87a223.css"></link>
 </head>
 
   <body>
@@ -98,6 +96,12 @@
       <main class="flex flex-grow justify-center min-h-screen p-4">
         <div class="text-2xl w-4/5">
   <div class="py-4">
+        <a href="/posts/2022-04-26-how-we-use-clean-architecture-at-hyper-to-build-hyper">Clean 🧼 Architecture 🛠 At Hyper ⚡️</a>
+
+        <p class="text-sm">
+          April 26, 2022
+        </p>
+    </div><div class="py-4">
         <a href="/posts/2022-03-31-using-cloudfront-to-redirect-http-to-https-on-apigateway">Using CloudFront to Redirect HTTP -&gt; HTTPS on ApiGateway</a>
 
         <p class="text-sm">
