--- a/about/index.html
+++ b/about/index.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <script src="https://cdn.jsdelivr.net/npm/theme-change@2.0.2/index.js"></script>  
-  <link rel="stylesheet" href="/assets/asset.e4a2fa38.css"></link>
+  <link rel="stylesheet" href="/assets/asset.0503a59c.css"></link>
 </head>
 
   <body>
@@ -93,7 +93,7 @@
     </ul>
   </div>
 </div>
-      <main class="flex flex-grow justify-center min-h-screen p-4">
+      <main class="flex flex-grow justify-center min-h-screen p-4 mx-auto w-screen max-w-4xl">
         <div class="w-full md:w-3/5">
     <div class="flex-col space-around space-y-4">
       <div class="text-2xl py-4">
