--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <script src="https://cdn.jsdelivr.net/npm/theme-change@2.0.2/index.js"></script>  
-  <link rel="stylesheet" href="/assets/asset.7d87a223.css"></link>
+  <link rel="stylesheet" href="/assets/asset.0f2deb57.css"></link>
 </head>
 
   <body>
@@ -93,8 +93,8 @@
     </ul>
   </div>
 </div>
-      <main class="flex flex-grow justify-center min-h-screen p-4">
-        <div class="text-2xl w-4/5">
+      <main class="flex flex-grow justify-center min-h-screen p-4 mx-auto w-screen max-w-4xl">
+        <div class="text-2xl">
   <div class="py-4">
         <a href="/posts/2022-04-26-how-we-use-clean-architecture-at-hyper-to-build-hyper">Clean 🧼 Architecture 🛠 At Hyper ⚡️</a>
 
